macro(AddExample NAME)
    add_executable(${NAME} ${NAME}.cpp)
    target_include_directories(${NAME} PRIVATE ../)
    target_compile_features(${NAME} PRIVATE cxx_std_17)
endmacro(AddExample)

macro(AddTest NAME)
    add_executable(${NAME} ${NAME}.cpp)
    target_include_directories(${NAME} PRIVATE ../)
    target_compile_features(${NAME} PRIVATE cxx_std_17)
    add_test(NAME "${NAME}_test"
             COMMAND $<TARGET_FILE:${NAME}>)
endmacro()

AddExample(benchmark)
AddExample(log)
AddTest(cgmath_test)
AddExample(expected)
AddExample(ecs)
AddExample(sparse_sets)
AddExample(net_echo_client)
AddExample(net_echo_server)