macro(AddExample NAME)
    add_executable(${NAME} ${NAME}.cpp)
    target_include_directories(${NAME} PRIVATE ../)
    target_compile_features(${NAME} PRIVATE cxx_std_17)
endmacro(AddExample)

macro(AddTest NAME)
    add_executable(${NAME} ${NAME}.cpp)
    target_include_directories(${NAME} PRIVATE ../)
    target_compile_features(${NAME} PRIVATE cxx_std_17)
    add_test(NAME "${NAME}_test"
             COMMAND $<TARGET_FILE:${NAME}>)
endmacro()

AddExample(benchmark)
AddExample(log)
AddTest(cgmath_test)
AddExample(cgmath_benchmark)
AddExample(expected)
AddExample(ecs)
AddExample(sparse_sets)
AddTest(fp)
AddTest(refl)
AddTest(luabind)
AddTest(serialize)
AddTest(tweeny)
target_link_libraries(luabind PRIVATE sol2 lua) 
target_link_libraries(serialize PRIVATE sol2 lua)

if (WIN32)
    AddExample(net_echo_client)
    AddExample(net_echo_server)
endif()

AddExample(gogl_triangle)
target_link_libraries(gogl_triangle PRIVATE glad glfw)

AddExample(gogl_compute)
target_link_libraries(gogl_compute PRIVATE glad glfw)
